2007-06-16 15:52  Douglas Bates <bates@stat.wisc.edu>

	* [r4466] R/dgCMatrix.R, src/dgCMatrix.c, src/dgCMatrix.h, src/init.c:
	  added dgCMatrix_colSums for [col,row][Sums,Means]

2007-06-15 23:15  Douglas Bates <bates@stat.wisc.edu>

	* [r4460] R/sparseMatrix.R, man/dgCMatrix-class.Rd, src/dgCMatrix.c,
	  src/dgCMatrix.h, src/init.c: added lm.fit.sparse (unexported),
	  coercion of "factor" to "dgCMatrix" and dgCMatrix_cholsol
	* [r4461] R/AllClass.R, man/sparseMatrix-class.Rd: draft "indicators"
	  class
	* [r4463] R/sparseMatrix.R, man/dgCMatrix-class.Rd,
	  man/sparseMatrix-class.Rd: Don't need an "indicators" class - use the
	  row names to store the levels - duh!	Added an example.
	
2007-06-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Csparse.c (Csparse_validate): check for *repeated* entries
	thanks to example from Christian Buchta; with a test here:
	* tests/simple.R:

2007-06-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (callGeneric): another fix, needed for some cases
	of colSums(*, sparseResult = TRUE)

2007-06-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lsparseMatrix.R, R/ldenseMatrix.R (all, any): change default to
	'na.rm = FALSE' as "everywhere" else in R.

2007-06-05 Douglas Bates <bates@stat.wisc.edu>

	* [r4421] src/CSparse_install.sh: Modify for new organization of
	  CSparse package
	* [r4425] src/UFsparse_download.sh: Update to version 3.0.0 of
	  SuiteSparse
	* [r4426] src/Makefile: add ./UFconfig to the include path for
	  compilation
	* [r4427] src/cs.[ch]: update to CSparse version 2.2.0
	* [r4428] inst/doc/UFsparse/* src/{AMD,CHOLMOD,COLAMD}/*
	  src/UFconfig/UFconfig.h: Update to version 3.0.0 of SuiteSparse

2007-06-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (emptyColnames): + argument msg.if.not.empty, used in
	* R/sparseMatrix.R (prSpMatrix): now gives a message about
	suppressed column names.

2007-06-04 17:13  Douglas Bates <bates@stat.wisc.edu>
